fix some compiler warnings, clean up
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
(cherry picked from commit 1ab0d5c0eec210fb29931a710ce47ed90b00ab4a)